--- a/index.html
+++ b/index.html
@@ -36,13 +36,49 @@ function revertEyes5(){
 document.getElementById("game5").style.zIndex = "-3";
 }
 function clickme(){
-setTimeout(clickmetimer, 500);
+setTimeout(clickmetimer1, 600);
 document.getElementById("bgr").style.height = "1500px";
 document.getElementById("chunk").style.display = 'none'; 
 document.getElementById("eyesclicked").style.zIndex = "-1";
-document.getElementById("bgr").style.backgroundImage = "url('images/gentleman_expand.gif')";
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand1.png')";
 //document.getElementById("showcase").style.display = 'initial'; 
 }
+function clickmetimer1(){
+setTimeout(clickmetimer2, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand2.png')";
+}
+function clickmetimer2(){
+setTimeout(clickmetimer3, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand3.png')";
+}
+function clickmetimer3(){
+setTimeout(clickmetimer4, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand4.png')";
+}
+function clickmetimer4(){
+setTimeout(clickmetimer5, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand5.png')";
+}
+function clickmetimer5(){
+setTimeout(clickmetimer6, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand6.png')";
+}
+function clickmetimer6(){
+setTimeout(clickmetimer7, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand7.png')";
+}
+function clickmetimer7(){
+setTimeout(clickmetimer8, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand8.png')";
+}
+function clickmetimer8(){
+setTimeout(clickmetimer9, 600);
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand9.png')";
+document.getElementById("showcase").style.display = 'initial'; 
+}
+
+
+
 function clickmetimer(){
 document.getElementById("showcase").style.display = 'initial'; 
 }
@@ -71,7 +107,17 @@ document.getElementById("showcase").style.display = 'initial';
 		<div id="game5"></div>
 		<div id="eyesclicked"></div>
 		<div class="eyes"></div>
-		<div id="bgrexpand"></div>
+		<!-- preloaded stuff !-->
+		<link rel=preload as=image href="images/expandimages/gentleman_expand1.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand2.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand3.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand4.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand5.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand6.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand7.png">
+		<link rel=preload as=image href="images/expandimages/gentleman_expand8.png">		
+		<link rel=preload as=image href="images/expandimages/gentleman_expand9.png">
+		<!-- preloaded stuff end !-->		
 		<div id="bgr">
 			
 			
