--- a/index.html
+++ b/index.html
@@ -72,7 +72,6 @@ setTimeout(clickmetimer8, 600);
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand8.png')";
 }
 function clickmetimer8(){
-setTimeout(clickmetimer9, 600);
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand9.png')";
 document.getElementById("showcase").style.display = 'initial'; 
 }
@@ -117,6 +116,15 @@ document.getElementById("showcase").style.display = 'initial';
 		<link rel=preload as=image href="images/expandimages/gentleman_expand7.png">
 		<link rel=preload as=image href="images/expandimages/gentleman_expand8.png">		
 		<link rel=preload as=image href="images/expandimages/gentleman_expand9.png">
+		<div id="bgrexpand1"></div>
+		<div id="bgrexpand2"></div>
+		<div id="bgrexpand3"></div>
+		<div id="bgrexpand4"></div>		
+		<div id="bgrexpand5"></div>		
+		<div id="bgrexpand6"></div>		
+		<div id="bgrexpand7"></div>		
+		<div id="bgrexpand8"></div>		
+		<div id="bgrexpand9"></div>	
 		<!-- preloaded stuff end !-->		
 		<div id="bgr">
 			
