--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 <title>MikeMarshal</title>
 
 <script>
+var forwardtick;
+
 function changeEyes1(){
 document.getElementById("game1").style.zIndex = "-1";
 }
@@ -56,20 +58,8 @@ setTimeout(clickmetimer4, 600);
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand4.png')";
 }
 function clickmetimer4(){
-setTimeout(clickmetimer5, 600);
-document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand5.png')";
-}
-function clickmetimer5(){
-setTimeout(clickmetimer6, 100);
-document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand6.png')";
-}
-function clickmetimer6(){
-setTimeout(clickmetimer7, 100);
-document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand7.png')";
-}
-function clickmetimer7(){
 setTimeout(clickmetimer8, 100);
-document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand8.png')";
+document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand5.png')";
 }
 function clickmetimer8(){
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand9.png')";
@@ -111,19 +101,13 @@ document.getElementById("showcase").style.display = 'initial';
 		<link rel=preload as=image href="images/expandimages/gentleman_expand2.png">
 		<link rel=preload as=image href="images/expandimages/gentleman_expand3.png">
 		<link rel=preload as=image href="images/expandimages/gentleman_expand4.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand5.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand6.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand7.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand8.png">		
+		<link rel=preload as=image href="images/expandimages/gentleman_expand5.png">		
 		<link rel=preload as=image href="images/expandimages/gentleman_expand9.png">
 		<div id="bgrexpand1"></div>
 		<div id="bgrexpand2"></div>
 		<div id="bgrexpand3"></div>
 		<div id="bgrexpand4"></div>		
-		<div id="bgrexpand5"></div>		
-		<div id="bgrexpand6"></div>		
-		<div id="bgrexpand7"></div>		
-		<div id="bgrexpand8"></div>		
+		<div id="bgrexpand5"></div>			
 		<div id="bgrexpand9"></div>	
 		<!-- preloaded stuff end !-->		
 		<div id="bgr">
