--- a/index.html
+++ b/index.html
@@ -54,16 +54,13 @@ setTimeout(clickmetimer3, 600);
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand3.png')";
 }
 function clickmetimer3(){
-setTimeout(clickmetimer4, 600);
+setTimeout(clickmetimer8, 600);
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand4.png')";
-}
-function clickmetimer4(){
-setTimeout(clickmetimer8, 100);
-document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand5.png')";
 }
 function clickmetimer8(){
 document.getElementById("bgr").style.backgroundImage = "url('images/expandimages/gentleman_expand9.png')";
 document.getElementById("showcase").style.display = 'initial'; 
+document.getElementById("showcasebottom").style.display = 'initial'; 
 }
 
 
@@ -100,14 +97,12 @@ document.getElementById("showcase").style.display = 'initial';
 		<link rel=preload as=image href="images/expandimages/gentleman_expand1.png">
 		<link rel=preload as=image href="images/expandimages/gentleman_expand2.png">
 		<link rel=preload as=image href="images/expandimages/gentleman_expand3.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand4.png">
-		<link rel=preload as=image href="images/expandimages/gentleman_expand5.png">		
+		<link rel=preload as=image href="images/expandimages/gentleman_expand4.png">	
 		<link rel=preload as=image href="images/expandimages/gentleman_expand9.png">
 		<div id="bgrexpand1"></div>
 		<div id="bgrexpand2"></div>
 		<div id="bgrexpand3"></div>
-		<div id="bgrexpand4"></div>		
-		<div id="bgrexpand5"></div>			
+		<div id="bgrexpand4"></div>				
 		<div id="bgrexpand9"></div>	
 		<!-- preloaded stuff end !-->		
 		<div id="bgr">
@@ -117,7 +112,15 @@ document.getElementById("showcase").style.display = 'initial';
 				<h1><b>Updog</b></h1>
 				<img src="images/showcase/updog_menu.gif" alt="Updog Menu" style="width:449px;height:73px;">
 				<h3>a little procedural game </h3>
-				
+				<br>
+				<img src="images/showcase/updog_trial4.gif" alt="Updog Menu" style="width:326px;height:317px;" align="left">				
+				<img src="images/showcase/updog_trial5.gif" alt="Updog Menu" style="width:326px;height:317px;" align="right">	
+					<div id = "showcasebottom">
+					Every level is different... no two levels are the same...
+					<br>
+					<br>
+					See how far you can get and how long you can last...
+					</div>
 			
 
 
