--- a/index.html
+++ b/index.html
@@ -165,8 +165,9 @@ document.getElementById("showcase").style.display = 'initial';
 				<source src="images/showcase/thisisit_fullrender.mp4" type="video/mp4">
 				</video>
 				<br><br>
-				<img src="images/showcase/thisisit_playeridle.gif" alt="This is it gameplay 1" style="width:283px;height:266px;" align="left">				
-				<img src="images/showcase/thisisit_wirtwake.gif" alt="This is it gameplay 2" style="width:283px;height:266px;" align="right">		
+				<img src="images/showcase/thisisit_playeridle.gif" alt="This is it gameplay 1" style="width:218px;height:205px;" align="left">
+				<img src="images/showcase/thisisit_turtle.gif" alt="This is it gameplay 2" style="width:218px;height:205px;" align="middle">					
+				<img src="images/showcase/thisisit_wirtwake.gif" alt="This is it gameplay 2" style="width:218px;height:205px;" align="right">		
 			</div>	
 			<div id = "showcasebottom">
 				<br>
